[package]
name = "rte"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
flate2 = "1.1.5"
minijinja = { version = "2.12.0", features = ["loader", "custom_syntax", "debug"] }
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tar = "0.4.44"
url = "2.5.7"
urlencoding = "2.1.3"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3"
